--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 		  <artifactId>junit</artifactId>
 		  <version>4.12</version>
 		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
